--- a/Recess_Project_Template/src/our_app/website/templates/dashboard/pages/facilities.html
+++ b/Recess_Project_Template/src/our_app/website/templates/dashboard/pages/facilities.html
@@ -369,6 +369,28 @@
     </nav>
     <!-- End Navbar -->
     <div class="container-fluid py-4">
+
+      <div class="col-lg-6col-md-6">
+        <div class="card h-100">
+          <div class="card-header pb-0">
+            <h6>Chart</h6>
+
+          </div>
+          <div class="card-body p-3">
+            <div class="bg-gradient-dark border-radius-lg py-3 pe-1 mb-3">
+              <div class="chart">
+
+                <canvas id="facilityChart" width="400" height="400"></canvas>
+
+
+
+
+
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
       <div class="row">
         <div class="col-12">
           <div class="card mb-4">
@@ -537,11 +559,59 @@
       </div>
     </div>
   </div>
+
+  <!-- Include Chart.js CSS and JS libraries -->
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/chart.js">
+  <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+
+
   <!--   Core JS Files   -->
   <script src="{% static 'assets/js/core/popper.min.js' %}"></script>
   <script src="{% static 'assets/js/core/bootstrap.min.js' %}"></script>
   <script src="{% static 'assets/js/plugins/perfect-scrollbar.min.js' %}"></script>
   <script src="{% static 'assets/js/plugins/smooth-scrollbar.min.js' %}"></script>
+
+  <script>
+    var facilityData = {
+      labels: ['Poor', 'Fair', 'Good', 'Very Good', 'Excellent'],
+
+      datasets: [{
+        data: [
+          {% for rating in facility_rating_counts %}
+                    {{ rating }},
+      {% endfor %}
+            ],
+    backgroundColor: [
+      'rgba(255, 99, 132, 0.8)', // Red for 'Poor'
+      'rgba(255, 159, 64, 0.8)', // Orange for 'Fair'
+      'rgba(55, 158, 95, 0.8)',  // Green for 'Good'
+      'rgba(54, 162, 235, 0.8)', // Blue for 'Very Good'
+      'rgba(75, 192, 192, 0.8)', // Teal for 'Excellent'
+    ],
+      borderWidth: 0
+        }]
+    };
+
+    var facilityOptions = {
+      responsive: true,
+      maintainAspectRatio: false,
+      plugins: {
+        legend: {
+          display: true,
+          position: 'bottom',
+        }
+      }
+    };
+
+    var facilityChart = new Chart(document.getElementById('facilityChart'), {
+      type: 'pie',
+      data: facilityData,
+      options: facilityOptions
+    });
+  </script>
+
+
+
   <script>
     var win = navigator.platform.indexOf("Win") > -1;
     if (win && document.querySelector("#sidenav-scrollbar"))
