--- a/Recess_Project_Template/src/our_app/website/templates/dashboard/pages/facilities.html
+++ b/Recess_Project_Template/src/our_app/website/templates/dashboard/pages/facilities.html
@@ -454,6 +454,33 @@
                     {% endfor %}
                   </tbody>
                 </table>
+                <!-- Add the pagination links at the bottom of the table -->
+                <div class="container w-100">
+                  <div class="row">
+                    <div class="col-12 text-center">
+                      <!-- Add the pagination links at the bottom of the table -->
+                      <div class="pagination-container" style="margin-top: 20px; margin-bottom: 20px;">
+                        <div class="pagination">
+                          <span class="step-links">
+                            {% if page_obj.has_previous %}
+                            <a href="?page=1">&laquo; first</a>
+                            <a href="?page={{ page_obj.previous_page_number }}">previous</a>
+                            {% endif %}
+
+                            <span class="current">
+                              Page {{ page_obj.number }} of {{ page_obj.paginator.num_pages }}.
+                            </span>
+
+                            {% if page_obj.has_next %}
+                            <a href="?page={{ page_obj.next_page_number }}">next</a>
+                            <a href="?page={{ page_obj.paginator.num_pages }}">last &raquo;</a>
+                            {% endif %}
+                          </span>
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+                </div>
 
               </div>
             </div>
